--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="342dp"
-        android:text="hello"
-        tools:layout_editor_absoluteX="167dp"
-        tools:layout_editor_absoluteY="304dp" />
 
     <Button
         android:id="@+id/logout"
@@ -23,4 +12,50 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:text="logout " />
+
+    <EditText
+        android:id="@+id/etDescription"
+        android:layout_width="287dp"
+        android:layout_height="61dp"
+        android:layout_below="@+id/btnCapture"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Description"
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/btnCapture"
+        android:layout_width="286dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="52dp"
+        android:text="Take Picture" />
+
+    <Button
+        android:id="@+id/btnSubmit"
+        android:layout_width="289dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etDescription"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="24dp"
+        android:text="Submit" />
+
+    <ImageView
+        android:id="@+id/ivPostImg"
+        android:layout_width="214dp"
+        android:layout_height="297dp"
+        android:layout_above="@+id/btnCapture"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="4dp"
+        tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
