--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -12,8 +12,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="306dp"
-        android:layout_marginBottom="281dp"
-        app:srcCompat="@drawable/icon" />
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="277dp"
+        android:layout_marginBottom="310dp"
+        app:srcCompat="@drawable/weightroomlogo" />
 </RelativeLayout>
