--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/exName"
+        android:id="@+id/exTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
