--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -9,12 +9,12 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/exName"
+        android:id="@+id/exTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        tools:text="rahul" />
+        tools:text="Deadlift" />
 
     <TextView
         android:id="@+id/exDescription"
