--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -17,7 +17,7 @@
         tools:text="Deadlift" />
 
     <TextView
-        android:id="@+id/exDescription"
+        android:id="@+id/exEquipment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
