--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -23,4 +23,10 @@
         android:layout_marginBottom="8dp"
         tools:text="trying to look hipster" />
 
+    <TextView
+        android:id="@+id/exCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ArmsPlaceholder" />
+
 </LinearLayout>
