--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,7 +38,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginTop="79dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/shohei"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="Equipment"
+        android:text="Your Equipment"
         android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
