--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -13,7 +13,18 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="76dp"
-        tools:src="@drawable/weightroomlogo" />
+        android:visibility="visible"
+        app:srcCompat="@drawable/weightroomlogo"
+        tools:src="@drawable/weightroomlogo"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/exRecommended"
+        android:layout_width="69dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="Button" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
@@ -35,12 +46,16 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/exLogout"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="11dp"
-        android:text="ADD" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="339dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="2dp"
+        android:text="logout"
+        android:textSize="8sp" />
 
 </RelativeLayout>
