--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,23 @@
 
 
 
+
+
     ]]>
+
+    <ImageView
+        android:id="@+id/homeIcon2"
+        android:layout_width="266dp"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/weightroomlogo"
+        tools:src="@drawable/weightroomlogo"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/exUsername"
@@ -47,11 +63,15 @@
 
     <Button
         android:id="@+id/exLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="74dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:text="Logout"
+        android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/homeIcon2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
