--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,28 @@
 
 
 
+
+
+
+
+
+
     ]]>
+
+    <ImageButton
+        android:id="@+id/exLogout"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:backgroundTint="#00FFFFFF"
+        android:src="@drawable/ic_baseline_logout_24"
+        android:text="logout"
+        android:textSize="8sp"
+        app:layout_constraintStart_toEndOf="@+id/homeIcon2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/homeIcon2"
@@ -61,19 +82,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/exLogout"
-        android:layout_width="74dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:text="Logout"
-        android:textSize="8sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/homeIcon2"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/equipmentHeader"
         android:layout_width="wrap_content"
@@ -86,11 +94,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exUsername" />
 
-    <Button
+    <ImageButton
         android:id="@+id/exEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="84dp"
+        android:backgroundTint="#00FFFFFF"
+        android:src="@drawable/ic_baseline_edit_24"
         android:text="edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exUsername" />
