--- a/app/src/main/res/layout/activity_prompt.xml
+++ b/app/src/main/res/layout/activity_prompt.xml
@@ -5,6 +5,8 @@
     android:id="@+id/etItem2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutAnimation="@anim/layout_animation"
+
     tools:context=".ui.login.PromptActivity">
 
     <ImageView
@@ -13,8 +15,9 @@
         android:layout_height="197dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="70dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="3dp"
         android:visibility="visible"
         app:srcCompat="@drawable/select_equip"
         tools:srcCompat="@drawable/select_equip"
@@ -92,19 +95,21 @@
         android:text="Kettlebell"
         android:textSize="18dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
+        android:layout_width="74dp"
+        android:layout_height="52dp"
         android:layout_below="@+id/cb2"
         android:layout_alignStart="@+id/cb2"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/cb2"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="252dp"
-        android:layout_marginBottom="148dp"
-        android:text="submit" />
+        android:layout_marginStart="-17dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginBottom="150dp"
+        android:backgroundTint="#00FFFFFF"
+        android:src="@drawable/ic_baseline_send_24"
+        app:tint="#000000" />
 
     <Button
         android:id="@+id/selectAll"
@@ -112,6 +117,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="210dp"
         android:text="@android:string/selectAll" />
 
     <Button
@@ -122,8 +129,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="287dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="2dp"
+        android:layout_marginTop="211dp"
+        android:layout_marginEnd="1dp"
         android:text="Reset" />
 
     <ImageView
