--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -27,7 +27,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="120dp"
-        android:padding="8dp" />
+        android:padding="8dp"
+        />
 
     <ImageButton
         android:id="@+id/exLogout"
