--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,9 +64,10 @@
         android:layout_width="140dp"
         android:layout_height="34dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.682"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
 
@@ -110,11 +111,25 @@
         android:id="@+id/eqList"
         android:layout_width="145dp"
         android:layout_height="231dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginEnd="96dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/equipmentHeader"
         app:layout_constraintTop_toBottomOf="@+id/equipmentHeader"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintVertical_bias="0.235" />
+
+    <ImageButton
+        android:id="@+id/ibProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="152dp"
+        android:backgroundTint="#00FFFFFF"
+        app:tint="#373232"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/homeIcon2"
+        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
